TestCluster/ingress-tls-dev-int.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rtf-dev-int-eks-c1-int-ingress
  namespace: rtf
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: rtf-dev-int-c1-int-aws-group
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /app-name/api/v1/ping
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:99619075467:certificate/********bf83e29dd0ef"
    
spec:
  ingressClassName: alb
  rules:
  - host: "api-rtf-dev-int.example.com"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /app-name/*
        backend:
            service:
                name: app
                port:
                  number: 80
